Main nav text alignment fix

--- a/wp-content/themes/mct/styles/modules/_site-nav.scss
+++ b/wp-content/themes/mct/styles/modules/_site-nav.scss
@@ -50,6 +50,7 @@
 
 	&__cat{
 		clear:both;
+		text-align: left;
 
 		&__title{
 			padding-top:3px;
